# Portfolio

./: main.py  pyproject.toml
pages/: Design-Patterns.md  News_agent.md  example-project-one.md
static/css/: style.css
static/fonts/: 1001fonts-portland-eula.txt  PORTLAND LITE.ttf:Zone.Identifier
static/js/: main.js
templates/: base.html  contact.html  index.html  project_detail.html
