[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "frozen-flask>=1.0.2",
    "markdown>=3.10.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "supabase>=2.27.2",
]
